# msprof

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README-build.md  README.md  README_EN.md  build.py
analysis/csrc/: CMakeLists.txt
analysis/csrc/application/: export_manager.cpp  export_summary.cpp
analysis/csrc/dfx/: error_code.h  log.cpp  log.h
analysis/csrc/entities/: ascend_obj.h  event.cpp  event.h  event_queue.cpp  event_queue.h  tree.cpp  tree.h
analysis/csrc/parser/: base_parser.cpp  base_parser.h  chunk_generator.cpp  chunk_generator.h
analysis/csrc/py_interface/: py_init.cpp  py_init_parser.cpp  py_init_parser.h
analysis/csrc/utils/: file.cpp  file.h  hp_float.cpp  hp_float.h  safe_unordered_map.h  singleton.h  thread_pool.cpp  thread_pool.h  time_logger.h  time_utils.cpp  time_utils.h  utils.cpp  utils.h
analysis/csrc/worker/: host_trace_worker.cpp  host_trace_worker.h  kernel_parser_worker.cpp  kernel_parser_worker.h
cmake/superbuild/: CMakeLists.txt
collector/: CMakeLists.txt
collector/dvvp/: CMakeLists.txt
collector/dvvp/app/: application.cpp  application.h  env_manager.cpp  env_manager.h
collector/dvvp/message/: codec.cpp  codec.h  data_define.h  dispatcher.cpp  dispatcher.h  message.h  prof_json_config.cpp  prof_json_config.h  prof_params.h
collector/dvvp/msprofbin/: CMakeLists.txt
collector/dvvp/params_adapter/: params_adapter.cpp  params_adapter.h  params_adapter_aclapi.cpp  params_adapter_aclapi.h  params_adapter_acljson.cpp  params_adapter_acljson.h  params_adapter_aclsubscribe.cpp  params_adapter_aclsubscribe.h  params_adapter_geopt.cpp  params_adapter_geopt.h  params_adapter_impl.cpp  params_adapter_impl.h  params_adapter_msprof.cpp  params_adapter_msprof.h
collector/dvvp/proto/: msprofiler.proto  profiler.proto  profiler_ext.proto
collector/dvvp/transport/: ctrl_files_dumper.cpp  ctrl_files_dumper.h  file_ageing.cpp  file_ageing.h  file_slice.cpp  file_slice.h  file_transport.cpp  file_transport.h  hash_data.cpp  hash_data.h  parser_transport.cpp  parser_transport.h  prof_channel.cpp  prof_channel.h  receiver.cpp  receiver.h  transport.cpp  transport.h  uploader.cpp  uploader.h  uploader_mgr.cpp  uploader_mgr.h
collector/inc/toolchain/: prof_acl_api.h  prof_callback.h  prof_common.h  prof_engine.h  prof_reporter.h
collector/stub/: gen_stubapi.py
hisi/abl/mmpa/: CMakeLists.txt
hisi/adump/stackcore/: CMakeLists.txt  module.mk  stackcore.c
hisi/air/: .gitignore  .gitmodules  CMakeLists.txt  OWNERS  README.md  build.sh  build_fe.sh  build_ffts.sh  build_fwk.sh  classify_rule.txt  classify_rule.yaml
hisi/air/base/: CMakeLists.txt
hisi/air/cmake/: FindModule.cmake  android_compile.cmake  intf_pub_linux.cmake
hisi/air/compiler/: CMakeLists.txt
hisi/air/executor/: CMakeLists.txt
hisi/air/runner/: CMakeLists.txt
hisi/air/runtime/: CMakeLists.txt  monitor.sh
hisi/air/scripts/: format_source_code.sh  ge.sh
hisi/air/test/: CMakeLists.txt
hisi/air/tests/: CMakeLists.txt
llt/msprof_cpp/: CMakeLists.txt
llt/msprof_cpp/st/: CMakeLists.txt
llt/msprof_cpp/stub/: driver_plugin_stub.cpp  error_manager_stub.cpp  mmpa_plugin_stub.cpp
llt/msprof_cpp/ut/: CMakeLists.txt
llt/opensource/mockcpp/: CMakeLists.txt
mspti/: CMakeLists.txt
mspti/activity/: activity_manager.cpp  activity_manager.h
mspti/activity/ascend/: ascend_manager.cpp  ascend_manager.h  dev_prof_job.cpp  dev_prof_job.h  dev_prof_task.cpp  dev_prof_task.h  dev_task_manager.cpp  dev_task_manager.h  device.cpp  device.h
mspti/callback/: callback_manager.cpp  callback_manager.h
mspti/common/: bound_queue.h  config.h  context_manager.cpp  context_manager.h  function_loader.cpp  function_loader.h  mpsc_queue.h  object_pool.h  plog_manager.h  runtime_utils.cpp  runtime_utils.h  task.h  thread_local.h  thread_pool.cpp  thread_pool.h  utils.cpp  utils.h
mspti/common/inject/: acl_inject.h  acl_mem_inject.h  driver_inject.cpp  driver_inject.h  hccl_inject.cpp  hccl_inject.h  hccl_range_mark.cpp  hccl_range_mark.h  inject_base.h  mstx_inject.cpp  mstx_inject.h  plog_inject.cpp  plog_inject.h  profapi_inject.cpp  profapi_inject.h  rt_ffts.h  runtime_inject.cpp  runtime_inject.h  runtime_mem_inject.cpp  runtime_mem_inject.h
mspti/samples/: README.md
mspti/samples/callback_domain/: CMakeLists.txt  callback_domain.cpp
mspti/samples/callback_mstx/: CMakeLists.txt  callback_mstx.cpp
mspti/samples/common/: helper_mspti.h  util_acl.h  util_mspti.h
mspti/samples/mspti_activity/: CMakeLists.txt  mspti_activity.cpp
mspti/samples/mspti_correlation/: CMakeLists.txt  mspti_correlation.cpp
mspti/samples/mspti_external_correlation/: CMakeLists.txt  mspti_external_correlation.cpp
mspti/samples/mspti_hccl_activity/: CMakeLists.txt  mspti_hccl_activity.cpp
mspti/samples/mspti_mstx_activity_domain/: CMakeLists.txt  mspti_mstx_activity_domain.cpp
mspti/samples/python_mstx_monitor/: python_mstx_monitor.py
mspti/whl/csrc/: CMakeLists.txt  activity_buffer_pool.cpp  activity_buffer_pool.h  init.cpp  mspti_adapter.cpp  mspti_adapter.h
opensource/: CMakeLists.txt  protobuf_sym_rename.cmake
profcommon/: CMakeLists.txt
profcommon/common/: util.h
profcommon/mstx/: mstx_impl.cpp  mstx_impl.h  prof_mstx.cpp  prof_mstx.h
test/: CMakeLists.txt
test/cmake/: depend.cmake
test/fuzz_test/: CMakeLists.txt  test_api.txt
test/llt/: CMakeLists.txt
test/msprof_cpp/: CMakeLists.txt
test/st/: base_msprof.sh  l0_test_ascend_msprof_all_switch.sh  l0_test_ascend_msprof_all_sys_switch.sh  l0_test_ascend_msprof_app_sample_based_pipeutilization.sh  l0_test_ascend_msprof_app_task_based_pipeutilization.sh  l0_test_ascend_msprof_matmul_basic_api.sh  l1_test_ascend_msprof_acl_graph.sh  l1_test_ascend_msprof_app_sample_based_arithmetic_utilization.sh  l1_test_ascend_msprof_app_sample_based_memory_l0.sh  l1_test_ascend_msprof_torchair_add.sh  run_all.sh  st_case_summary.md  test_ascend_msprof_App_aic_mode_sample_based_read_memory.sh  test_ascend_msprof_aicpu_task_time_l1.sh  test_ascend_msprof_app_sample_based_memory.sh  test_base_msprof.sh
test/st/src/: model.py  (+20 more)
(+7017 files in other folders)
